splitview: Add minimum bounds for overview grid when dragging divider.

When we reach one third of work area, stop shrinking the overview bounds
and instead start sliding it out off screen.

Test: added test
Bug: 872141
Change-Id: I4d42e5943485c9a4d96205d1a1870823305b49e9
Reviewed-on: https://chromium-review.googlesource.com/1169974
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581995}
Former-commit-id: 1751c4de5c18ba49a54e260798ddfad56cafaa14